--- a/src/content/styles.css
+++ b/src/content/styles.css
@@ -110,6 +110,28 @@
   background: var(--hover-bg) !important;
 }
 
+/* Indentation based on heading level */
+.twitter-toc-panel .toc-item.level-1 {
+  padding-left: 16px;
+  font-weight: 600;
+}
+
+.twitter-toc-panel .toc-item.level-2 {
+  padding-left: 32px;
+}
+
+.twitter-toc-panel .toc-item.level-3 {
+  padding-left: 48px;
+  font-size: 13px;
+  color: var(--text-secondary);
+}
+
+.twitter-toc-panel .toc-item.level-4 {
+  padding-left: 64px;
+  font-size: 12px;
+  color: var(--text-secondary);
+}
+
 .twitter-toc-panel .toc-empty {
   padding: 20px 16px;
   text-align: center;
